infrastructure/observability/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: uptime-kuma
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - uptime.orangebybni.my.id
      secretName: cloudflare-origin-tls

  rules:
  - host: uptime.orangebybni.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma
            port:
              number: 3001
